@@ -64,6 +64,8 @@ Release 0.4.0 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-282 HCatInputFormat shouldn't expect storageHandler to be serializable (khorgath via gates)
+
   HCAT-281 HCat use table schema instead of partition schema to read partition data (daijy and khorgath via gates)
 
   HCAT 286 NPE in HdfsAuthorizationProvider (enis via gates)
